--- a/templates/tutor.html
+++ b/templates/tutor.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Alexander Francesco Fenn Parante">
+    <meta name="keywords" content="Personal Website, Alex">
+    <meta name="author" content="Rico Chung">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="../static/css/template.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -51,7 +54,7 @@
         <h1>Tutoring</h1>
     </div>  
     <div class="text">
-        <h1 style="color: #ffffff;">Fuck you Alex</h1>
+        <h1>Fuck you Alex</h1>
         <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus ratione rerum sequi atque ut quas 
             commodi eum fuga, vero, accusantium asperiores, nulla molestiae esse nobis earum minima eligendi nostrum 
