--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
         <h1>Welcome!</h1>
     </div>  
     <div class="text">
-        <img src="../static/img/selfie.jpg" alt="selfie of myself" class="selfie" width="300px">
+        <img src="../static/img/selfie.jpg" alt="selfie of myself" class="selfie">
         <h1>Welcome to my Personal Website!</h1>
         <p>
             Hello! My name is Chung Cheuk Yin, but people also call me Rico. I am a 17-year-old A Level student that 
