--- a/templates/project.html
+++ b/templates/project.html
@@ -54,11 +54,16 @@
         <h1>Projects</h1>
     </div>  
     <div class="text">
-        <section class="project-info">
-            <img src="../static/img/ball.jpg" alt="balls" width="250px">
-            <span>
+        <section>
+            <img src="../static/img/ball.jpg" alt="balls" class="project-image">
+            <span class="project-info">
                 <h2>Balls</h2>
-                <p>college sluts on deez nuts</p>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam omnis sed obcaecati harum velit 
+                  laboriosam iure! Accusantium labore quaerat in cumque voluptatem placeat vero consequuntur officia 
+                  consectetur sunt nemo, omnis expedita minima voluptate sit doloremque hic numquam assumenda quod 
+                  voluptas sed! Nam incidunt sit soluta amet optio quidem, veritatis quas!
+                </p>
             </span>
         </section>
     </div>
