--- a/static/css/template.css
+++ b/static/css/template.css
@@ -40,7 +40,7 @@ header{
     background: linear-gradient(to top, #00000069, #00000069),url(../img/spicy.png);
 }
 
-section{
+.project-container{
     background-color: #505050;
     border-radius: 20px;
     display: flex;
@@ -48,13 +48,27 @@ section{
 
 .project-image{
     border-radius: 20px 0px 0px 20px;
-    width: 26%;
+    width: 300px;
+    float: left;
 }
 
 .project-info{
     margin: auto;
     padding: 30px;
-    height: 100%;   
+    height: 100%;  
+}
+
+.project-info h2{
+    font-size: calc(10px + 2vw);
+    padding: 0px 20px;
+}
+
+.project-info p{
+    padding: 0px 20px;
+}
+
+.project-info h2{
+    font-size: 4vw;
 }
 
 .title{
@@ -68,17 +82,17 @@ section{
 
 .title h1{
     animation-name: title-scroll;
-    animation-duration: 1.0s;
+    animation-duration: 0.8s;
     animation-direction: reverse;
 }
 
 @keyframes title-scroll{
-    100% {transform: rotateY(60deg); opacity: 0.0};
+    100% {transform: translate(-40%, 0px) rotateY(-90deg); opacity: 0.0};
 }
 
 .title h1{
     padding: 10%;
-    font-size: 6.5em;
+    font-size: 8vw;
     text-align: left;
     vertical-align: middle;
     color: white in !important;
@@ -87,8 +101,9 @@ section{
 
 .selfie{
     float: right;
-    margin: 25px;
+    margin: 3%;
     border-radius: 5%;
+    width: calc(50px + 15%);
 }
 
 .rosanna{
