--- a/templates/project.html
+++ b/templates/project.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="../static/css/template.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="../static/js/script.js"></script>
     <link rel="icon" type="image/x-icon" href="../static/img/circle-pepe.png">
     <title>Rico's Website</title>
 </head>
@@ -54,7 +55,7 @@
         <h1>Projects</h1>
     </div>  
     <div class="text">
-        <section>
+        <div class="project-container">
             <img src="../static/img/ball.jpg" alt="balls" class="project-image">
             <span class="project-info">
                 <h2>Balls</h2>
@@ -65,7 +66,7 @@
                   voluptas sed! Nam incidunt sit soluta amet optio quidem, veritatis quas!
                 </p>
             </span>
-        </section>
+          </div>
     </div>
   </div>
   <footer>
