--- a/templates/alex.html
+++ b/templates/alex.html
@@ -54,7 +54,7 @@
         <h1>Alex</h1>
     </div>  
     <div class="text">
-        <h1>Fuck you Alex</h1>
+        <h1>ily Alex!!! uwu</h1>
         <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus ratione rerum sequi atque ut quas 
             commodi eum fuga, vero, accusantium asperiores, nulla molestiae esse nobis earum minima eligendi nostrum 
