--- a/templates/ball2.html
+++ b/templates/ball2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
@@ -26,7 +26,7 @@
                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="alex.html">Alex</a>
+                <a class="nav-link active" href="alex.html">Alex</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="project.html">Projects</a>
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="tutor.html">Tutoring</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="contact.html">Contact Me</a>
+                <a class="nav-link" href="contact.html">Contact Me</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -50,8 +50,8 @@
       </nav>
   </header>
   <div class="main-content">
-    <div class="title contact-title">
-        <h1>Contact Me</h1>
+    <div class="title alex-title">
+        <h1>Alex</h1>
     </div>  
     <div class="text">
         <h1>Fuck you Alex</h1>
