--- a/templates/project.html
+++ b/templates/project.html
@@ -55,7 +55,8 @@
         <h1>Projects</h1>
     </div>  
     <div class="text">
-        <div class="project-container">
+        <a href="ball1.html">
+          <div class="project-container">
             <img src="../static/img/ball.jpg" alt="balls" class="project-image">
             <span class="project-info">
                 <h2>Balls</h2>
@@ -67,6 +68,37 @@
                 </p>
             </span>
           </div>
+        </a>
+
+        <a href="ball2.html">
+          <div class="project-container">
+            <img src="../static/img/ball.jpg" alt="balls" class="project-image">
+            <span class="project-info">
+                <h2>Balls</h2>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam omnis sed obcaecati harum velit 
+                  laboriosam iure! Accusantium labore quaerat in cumque voluptatem placeat vero consequuntur officia 
+                  consectetur sunt nemo, omnis expedita minima voluptate sit doloremque hic numquam assumenda quod 
+                  voluptas sed! Nam incidunt sit soluta amet optio quidem, veritatis quas!
+                </p>
+            </span>
+          </div>
+        </a>
+
+        <a href="ball3.html">
+          <div class="project-container">
+            <img src="../static/img/ball.jpg" alt="balls" class="project-image">
+            <span class="project-info">
+                <h2>Balls</h2>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam omnis sed obcaecati harum velit 
+                  laboriosam iure! Accusantium labore quaerat in cumque voluptatem placeat vero consequuntur officia 
+                  consectetur sunt nemo, omnis expedita minima voluptate sit doloremque hic numquam assumenda quod 
+                  voluptas sed! Nam incidunt sit soluta amet optio quidem, veritatis quas!
+                </p>
+            </span>
+          </div>
+        </a>
     </div>
   </div>
   <footer>
