Added basic flask implementation

--- a/static/css/template.css
+++ b/static/css/template.css
@@ -113,7 +113,7 @@ a {
     float: right;
     margin: 3%;
     border-radius: 5%;
-    width: calc(50px + 15%);
+    width: calc(100px + 15%);
 }
 
 .rosanna{
@@ -125,11 +125,21 @@ a {
     border-radius: 5%;
 }
 
-.text {
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-top: 3%;
-    padding-bottom: 3%;
+.container {
+    padding-left: 6%;
+    padding-right: 6%;
+    padding-top: 4%;
+    padding-bottom: 4%;
+}
+
+.text{
+    font-size: calc(13px + 0.7vw);
+    text-align: justify;
+    padding: 10px;
+}
+
+.section-title{
+    padding: 5px;
 }
 
 footer{
