--- a/templates/base.html
+++ b/templates/base.html
@@ -45,47 +45,12 @@
       </div>
     </nav>
   </header>
+
   <div class="main-content">
-    <div class="title home-title">
-        <h1>Welcome!</h1>
-    </div>  
-    <div class="container">
-        <img src="../static/img/selfie.jpg" alt="selfie of myself" class="selfie">
-        <h1 class="section-title">Welcome to my Personal Website!</h1>
-        <p class="text">
-            <span style="font-size: 1.5em;">Greetings!</span>
-            My name is Chung Cheuk Yin, but most people call me Rico. I am an undergraduate studying Mathematics at 
-            the University of Oxford, Exeter College. Originally from Hong Kong, I’m passionate about understanding 
-            the world through the lens of mathematics and its incredible applications in both science and technology.
-        </p>
-
-        <p class="text">
-          Alongside my studies, I work as a part-time tutor for Mathematics and Physics. Teaching has deepened my 
-          understanding of these subjects and fueled my desire to make education more accessible and engaging. I’m 
-          currently involved in a startup called Eddie, which seeks to revolutionize the tutoring industry by offering 
-          tools like a question bank, an online whiteboard, and a platform to connect tutors with tutees.
-        </p>
-
-        <p class=text>
-          While academics play a big role in my life, I’m also someone who thrives on diverse experiences. I’m a keen 
-          fencer and basketball player, both of which challenge me to think strategically and stay active. Additionally, 
-          I’m learning the traditional Chinese unicorn dance, which connects me to my cultural roots and provides a 
-          fun, creative outlet.
-        </p>
-
-        <p class="text">
-          This website serves as my platform to share my projects, interests, and journey as I grow academically, 
-          professionally, and personally. Whether it's a new mathematical concept, an AI project, or an update on Eddie, 
-          you’ll find it all here.
-        </p>
-
-        <p class="text">
-          Feel free to explore the different sections of my website, and if you’d like to reach out, you can find my 
-          details on the Contact Me page. Your presence and feedback mean a lot—thank you for visiting, and I hope you 
-          enjoy your time here!
-        </p>
-    </div>
+    {% block content %}
+    {% endblock %}
   </div>
+
   <footer>
     <p id="copyright">sussy balls</p>
   </footer>
