--- a/templates/blog.html
+++ b/templates/blog.html
@@ -100,7 +100,12 @@
     </div>
   </div>
   <footer>
-    <p>2023 All Rights Reserved</p>
+    <p id="copyright">sussy balls</p>
   </footer>
+
+  <script>
+    const currentYear = new Date().getFullYear();
+    document.getElementById("copyright").innerHTML = currentYear.toString() + " All Rights Reserved"
+  </script>
 </body>
 </html>
