Set up the template for all pages

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,111 +1,56 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Alexander Francesco Fenn Parante">
-    <meta name="keywords" content="Personal Website, Alex">
-    <meta name="author" content="Rico Chung">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="../static/css/template.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="../static/img/circle-pepe.png">
-    <title>Rico's Website</title>
-</head>
-<body>
-  <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="../static/img/circle-pepe.png" alt="Pepe" width="50" height="50"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="alex.html">Alex</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="project.html">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="blog.html">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="tutor.html">Tutoring</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="contact.html">Contact Me</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-  </header>
-  <div class="main-content">
-    <div class="title contact-title">
-        <h1>Contact Me</h1>
-    </div>  
-    <div class="text">
-        <h1>Fuck you Alex</h1>
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus ratione rerum sequi atque ut quas 
-            commodi eum fuga, vero, accusantium asperiores, nulla molestiae esse nobis earum minima eligendi nostrum 
-            praesentium at aspernatur adipisci? Soluta quas exercitationem quisquam qui optio, culpa ducimus omnis iste 
-            corporis fuga, possimus, quae temporibus? Animi quaerat, non distinctio aspernatur veritatis possimus 
-            mollitia. Totam, cum, animi rem aut sed doloribus, earum impedit doloremque sunt voluptatem illo? Mollitia 
-            dicta distinctio deleniti soluta eligendi libero aliquam expedita nisi error cumque odio quam quis quas 
-            enim, nemo ipsa quibusdam beatae velit consequatur non laborum. Ducimus quas commodi saepe officia culpa 
-            eaque officiis animi. Voluptatum sequi eaque fugit, amet assumenda fugiat quam quas dolorem repellat ipsa 
-            nihil dolorum dolores, molestias et quidem nemo iste non accusantium mollitia ut officiis perspiciatis 
-            nam commodi. Quam pariatur ea eligendi minus, incidunt sit, neque ducimus molestiae iusto reprehenderit 
-            corrupti, suscipit repellat soluta sequi blanditiis a nulla? Soluta repellendus suscipit vel? Vero deleniti 
-            dolor corrupti quos architecto consequatur. Similique delectus optio molestiae ab. At voluptatem porro 
-            eligendi omnis dolorem esse? Magnam corrupti molestias quia fuga eligendi obcaecati ratione laboriosam 
-            aperiam nobis illo iste dolores quidem consequuntur ex quae, dolore accusamus assumenda maiores, tenetur 
-            officiis rerum excepturi.
-        </p>
-        <div class="rosanna">
-            <img src="../static/img/rosanna.jpg" alt="Rosanna Fenn" width="250px">
-            <p>A picture of Rosanna Fenn</p>
-        </div>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum natus aperiam vero, assumenda voluptate 
-            inventore nulla unde. Asperiores illum harum quidem eius! Alias omnis consequuntur, tenetur est consectetur 
-            dicta enim placeat hic voluptatibus nobis! Commodi quasi quo, debitis aperiam est nobis consectetur velit 
-            quaerat itaque architecto repellendus? Culpa deleniti aperiam, eaque quibusdam expedita dolores possimus 
-            cumque cupiditate corrupti numquam enim consectetur laborum dicta nobis laboriosam, maiores doloribus 
-            nam ipsam ducimus ea. Vel maxime sapiente magnam? Molestias officia nostrum voluptatum ex, harum voluptatibus
-            vitae perspiciatis laboriosam minima voluptatem doloremque vel odio nihil adipisci expedita eveniet 
-            oluptas beatae magnam maiores illum. Doloremque non necessitatibus eaque veniam culpa animi aut hic autem 
-            quos officiis, alias mollitia voluptatum, voluptas quas itaque corporis vel quis quam. Porro, cum 
-            perspiciatis? Ullam sunt est consectetur eaque! Dolore cumque, doloremque fugit aperiam cupiditate placeat 
-            praesentium animi corporis maxime quidem quis velit consectetur vel aliquid culpa nam necessitatibus 
-            quae. Incidunt aliquam temporibus dolor ratione perferendis accusamus esse excepturi officiis officia 
-            distinctio, ex voluptatibus, placeat ullam consequuntur illo soluta. Distinctio, quisquam sunt eos, 
-            accusantium maxime ut et quibusdam cumque aliquam necessitatibus totam quam nulla accusamus repellendus 
-            sapiente recusandae voluptatum veniam deleniti. Nemo aperiam corporis exercitationem maiores quisquam c
-            onsequuntur? Labore nobis voluptates, quas aliquid, impedit sit beatae iste dolores eius similique, quos 
-            accusamus suscipit commodi quae facilis soluta saepe. Doloribus laborum deserunt sed magnam impedit nihil,
-                autem deleniti cumque doloremque vero rem saepe sapiente? Sapiente minima consequuntur libero odio ipsum. 
-                Odit quos officia earum esse quia accusamus fuga, nobis maxime corrupti.
-        </p>
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, asperiores eum. Odio ipsa esse necessitatibus 
-            molestias animi, magni quia fuga, tempore alias ullam obcaecati. Expedita, suscipit. Commodi cupiditate eum enim?
-        </p>
-    </div>
-  </div>
-  <footer>
-    <p id="copyright">sussy balls</p>
-  </footer>
+{% extends 'base.html' %}
 
-  <script>
-    const currentYear = new Date().getFullYear();
-    document.getElementById("copyright").innerHTML = currentYear.toString() + " All Rights Reserved"
-  </script>
-</body>
-</html>
+{% block content %}
+<div class="title contact-title">
+    <h1>Contact Me</h1>
+</div>  
+<div class="text">
+    <h1>Fuck you Alex</h1>
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus ratione rerum sequi atque ut quas 
+        commodi eum fuga, vero, accusantium asperiores, nulla molestiae esse nobis earum minima eligendi nostrum 
+        praesentium at aspernatur adipisci? Soluta quas exercitationem quisquam qui optio, culpa ducimus omnis iste 
+        corporis fuga, possimus, quae temporibus? Animi quaerat, non distinctio aspernatur veritatis possimus 
+        mollitia. Totam, cum, animi rem aut sed doloribus, earum impedit doloremque sunt voluptatem illo? Mollitia 
+        dicta distinctio deleniti soluta eligendi libero aliquam expedita nisi error cumque odio quam quis quas 
+        enim, nemo ipsa quibusdam beatae velit consequatur non laborum. Ducimus quas commodi saepe officia culpa 
+        eaque officiis animi. Voluptatum sequi eaque fugit, amet assumenda fugiat quam quas dolorem repellat ipsa 
+        nihil dolorum dolores, molestias et quidem nemo iste non accusantium mollitia ut officiis perspiciatis 
+        nam commodi. Quam pariatur ea eligendi minus, incidunt sit, neque ducimus molestiae iusto reprehenderit 
+        corrupti, suscipit repellat soluta sequi blanditiis a nulla? Soluta repellendus suscipit vel? Vero deleniti 
+        dolor corrupti quos architecto consequatur. Similique delectus optio molestiae ab. At voluptatem porro 
+        eligendi omnis dolorem esse? Magnam corrupti molestias quia fuga eligendi obcaecati ratione laboriosam 
+        aperiam nobis illo iste dolores quidem consequuntur ex quae, dolore accusamus assumenda maiores, tenetur 
+        officiis rerum excepturi.
+    </p>
+    <div class="rosanna">
+        <img src="../static/img/rosanna.jpg" alt="Rosanna Fenn" width="250px">
+        <p>A picture of Rosanna Fenn</p>
+    </div>
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum natus aperiam vero, assumenda voluptate 
+        inventore nulla unde. Asperiores illum harum quidem eius! Alias omnis consequuntur, tenetur est consectetur 
+        dicta enim placeat hic voluptatibus nobis! Commodi quasi quo, debitis aperiam est nobis consectetur velit 
+        quaerat itaque architecto repellendus? Culpa deleniti aperiam, eaque quibusdam expedita dolores possimus 
+        cumque cupiditate corrupti numquam enim consectetur laborum dicta nobis laboriosam, maiores doloribus 
+        nam ipsam ducimus ea. Vel maxime sapiente magnam? Molestias officia nostrum voluptatum ex, harum voluptatibus
+        vitae perspiciatis laboriosam minima voluptatem doloremque vel odio nihil adipisci expedita eveniet 
+        oluptas beatae magnam maiores illum. Doloremque non necessitatibus eaque veniam culpa animi aut hic autem 
+        quos officiis, alias mollitia voluptatum, voluptas quas itaque corporis vel quis quam. Porro, cum 
+        perspiciatis? Ullam sunt est consectetur eaque! Dolore cumque, doloremque fugit aperiam cupiditate placeat 
+        praesentium animi corporis maxime quidem quis velit consectetur vel aliquid culpa nam necessitatibus 
+        quae. Incidunt aliquam temporibus dolor ratione perferendis accusamus esse excepturi officiis officia 
+        distinctio, ex voluptatibus, placeat ullam consequuntur illo soluta. Distinctio, quisquam sunt eos, 
+        accusantium maxime ut et quibusdam cumque aliquam necessitatibus totam quam nulla accusamus repellendus 
+        sapiente recusandae voluptatum veniam deleniti. Nemo aperiam corporis exercitationem maiores quisquam c
+        onsequuntur? Labore nobis voluptates, quas aliquid, impedit sit beatae iste dolores eius similique, quos 
+        accusamus suscipit commodi quae facilis soluta saepe. Doloribus laborum deserunt sed magnam impedit nihil,
+            autem deleniti cumque doloremque vero rem saepe sapiente? Sapiente minima consequuntur libero odio ipsum. 
+            Odit quos officia earum esse quia accusamus fuga, nobis maxime corrupti.
+    </p>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, asperiores eum. Odio ipsa esse necessitatibus 
+        molestias animi, magni quia fuga, tempore alias ullam obcaecati. Expedita, suscipit. Commodi cupiditate eum enim?
+    </p>
+</div>
+{% endblock %}
