--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,6 @@ It contains the header (navigation bar) and the footer
 
 When making a new page, the following lines serve as a template so that we
 don't need to copy the entire code for the template everytime
-
-{% extends 'base.html' %}
-
-{% block content %}
-    <p> insert your content here </p>
-{% endblock %}
-
 -->
 
 <!DOCTYPE html>
@@ -33,14 +26,14 @@ don't need to copy the entire code for the template everytime
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href=""><img src="../static/img/circle-pepe.png" alt="Pepe" width="50" height="50"></a>
+        <a class="navbar-brand" href="/"><img src="../static/img/circle-pepe.png" alt="Pepe" width="50" height="50"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="alex">Alex</a>
